# synapseformation

./: .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS
.github/workflows/: ci.yml
synapseformation/: __init__.py  __main__.py  client.py  create.py  utils.py
synapseformation/schemas/: long.schema.yml
templates/: example_template.yaml  long.yaml  treat_ad_long.yaml
templates/JSON/: treat_ad.json
templates/YAML/: challenge_staging_site.yaml  challenge_staging_site_long.yaml  treat_ad.yaml
tests/: test_client.py  test_create.py  test_utils.py
