[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synapseformation"
dynamic = ["version"]
readme = "README.md"
description = "Synapse Formation will create Synapse resources as code (similar to terraform plan, apply, destroy)"
authors = [
    {name = "Thomas Yu", email = "thomas.yu@sagebionetworks.org"}
]
requires-python = ">=3.10, <3.13"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]
dependencies = [
  "click",
  "synapseclient>=4.9.0",
  "pyyaml"
]

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Documentation = "https://github.com/Sage-Bionetworks/synapseformation"
Repository = "https://github.com/Sage-Bionetworks/synapseformation"
Issues = "https://github.com/Sage-Bionetworks/synapseformation/issues"

[project.scripts]
synapseformation = "synapseformation.__main__:cli"

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "synapseformation.__version__"}
