[metadata]
name = synapseformation
version = attr: synapseformation.__version__
description = Client for using Synapse Formation templates.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sage-Bionetworks/synapseformation
author = Kenneth Daily,Thomas Yu,Kelsey Montgomery
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

project_urls =
    Documentation = https://github.com/Sage-Bionetworks/synapseformation
    Source Code = https://github.com/Sage-Bionetworks/synapseformation
    Bug Tracker = https://github.com/Sage-Bionetworks/synapseformation/issues

[options]
packages = find:
python_requires = >=3.9
zip_safe = False
install_requires =
    click
    synapseclient>=2.4.0
    pyyaml

[options.entry_points]
console_scripts =
    synapseformation = synapseformation.__main__:cli